# serial-robots

./: LICENSE  README.md
models/ur10/: model.config  ur10.sdf
plugins/: CMakeLists.txt
plugins/src/: ur10_controller.cc  ur10_joint_controller.cc
worlds/: ur10.world
